fix: height sections on mobile

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -34,6 +34,10 @@ html {
   min-height: 100vh;
   display: flex;
   align-items: center;
+  @media (width < 640px) {
+    min-height: 50vh;
+
+  }
 }
 .g-dark-blue {
   background-color: #1e1d30;
